# macroquad-android-platformer

./: Cargo.toml  README.md  generate_icons.sh
src/: main.rs
